--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -1,15 +1,13 @@
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
-production:
-  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
-
 common: &common
-  email_provider_username: <%= ENV["SENDGRID_USERNAME"] %>
-  email_provider_password: <%= ENV["SENDGRID_PASSWORD"] %>
-  email_provider_host: <%= ENV["SENDGRID_HOST"] %>
-  email_provider_port: <%= ENV["SENDGRID_PORT"] %>
-  domain_name: <%= ENV["DOMAIN_NAME"] %>
-  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  email_provider_username: '<%= ENV["SENDGRID_USERNAME"] %>'
+  email_provider_password: '<%= ENV["SENDGRID_PASSWORD"] %>'
+  email_provider_host: '<%= ENV["SENDGRID_HOST"] %>'
+  email_provider_port: '<%= ENV["SENDGRID_PORT"] %>'
+  domain_name: '<%= ENV["DOMAIN_NAME"] %>'
+  secret_key_base: '<%= ENV["SECRET_KEY_BASE"] %>'
+
 development:
   <<: *common
 
